<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
		 xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
		 xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>

	<groupId>org.group_three</groupId>
	<artifactId>JavaProjectWiSe2526</artifactId>
	<version>1.0-SNAPSHOT</version>

	<properties>
		<maven.compiler.source>25</maven.compiler.source>
		<maven.compiler.target>25</maven.compiler.target>
		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
		<javafx.version>25.0.1</javafx.version> <!-- Set JavaFX-Version to 25.0.1 -->
		<mainClassPath>org.group_three.Main</mainClassPath> <!-- Set the main class path -->
	</properties>

	<dependencies>

		<!-- Add JavaFX -->
		<dependency>
			<groupId>org.openjfx</groupId>
			<artifactId>javafx-controls</artifactId>
			<version>${javafx.version}</version>
		</dependency>
		<dependency>
			<groupId>org.openjfx</groupId>
			<artifactId>javafx-fxml</artifactId>
			<version>${javafx.version}</version>
		</dependency>

        <!-- Markdown -> HTML, vulnerability doesnt effect us -->
        <!-- We tried using "flexmark" without all, but "-all" has the table renderer. -->
        <dependency>
            <groupId>com.vladsch.flexmark</groupId>
            <artifactId>flexmark-all</artifactId>
            <version>0.42.14</version>
        </dependency>

        <!-- HTML -> PDF -->
        <dependency>
            <groupId>com.openhtmltopdf</groupId>
            <artifactId>openhtmltopdf-pdfbox</artifactId>
            <version>1.0.10</version>
        </dependency>


        <dependency>
            <groupId>org.eclipse.sumo</groupId>
            <artifactId>traas</artifactId>
            <version>1.0.0</version> <!-- TraaS internally has Version 1.1.0, but Maven cant see that -->
        </dependency>

        <!-- JSON Lib -->
        <dependency>
            <groupId>com.google.code.gson</groupId>
            <artifactId>gson</artifactId>
            <version>2.11.0</version>
        </dependency>



    </dependencies>

	<build>
		<plugins>

			<!-- Compiler Plugin -->
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-compiler-plugin</artifactId>
				<version>3.13.0</version>
				<configuration>
					<source>25</source>
					<target>25</target>
				</configuration>
			</plugin>

			<!-- Exec Plugin -->
			<plugin>
				<groupId>org.codehaus.mojo</groupId>
				<artifactId>exec-maven-plugin</artifactId>
				<version>3.6.2</version>
				<configuration>
					<mainClass>${mainClassPath}</mainClass>
				</configuration>
			</plugin>

			<!-- JavaFX Maven Plugin -->
			<plugin>
				<groupId>org.openjfx</groupId>
				<artifactId>javafx-maven-plugin</artifactId>
				<version>0.0.8</version>
				<configuration>
					<mainClass>${mainClassPath}</mainClass>
                    <options>
                        <option>--enable-native-access=javafx.graphics</option>
                    </options>
				</configuration>
			</plugin>

            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-install-plugin</artifactId>
                <version>3.1.2</version>
                <executions>
                    <execution>
                        <id>install-local-jar</id>
                        <phase>validate</phase> <!-- NOT initialize!!! -->
                        <goals>
                            <goal>install-file</goal>
                        </goals>
                        <configuration>
                            <file>${project.basedir}/libs/TraaS.jar</file>
                            <groupId>org.eclipse.sumo</groupId>
                            <artifactId>traas</artifactId>
                            <version>1.0.0</version>
                            <packaging>jar</packaging>
                        </configuration>
                    </execution>
                </executions>
            </plugin>

            <plugin>
                <artifactId>maven-assembly-plugin</artifactId>
                <version>3.7.1</version>
                <configuration>
                    <archive>
                        <manifest>
                            <mainClass>${mainClassPath}</mainClass>
                        </manifest>
                    </archive>
                    <descriptorRefs>
                        <descriptorRef>jar-with-dependencies</descriptorRef>
                    </descriptorRefs>
                </configuration>
                <executions>
                    <execution>
                        <phase>package</phase>
                        <goals>
                            <goal>single</goal>
                        </goals>
                    </execution>
                </executions>
            </plugin>


		</plugins>
	</build>
</project>


